# mp_remote

./: .clang-format  .editorconfig  .gitignore  .gitmodules  .swiftlint.yml  CMakeLists.txt  CMakePresets.json  Makefile  PRIVACY.md  README.md
.github/workflows/: build.yml  deploy.yml  lint.yml  metadata.yml
client/android/: build.gradle.kts  gradle.properties  settings.gradle.kts
client/android/app/: build.gradle.kts
client/android/app/src/main/: AndroidManifest.xml
client/android/app/src/main/cpp/: CMakeLists.txt  ClientLoop.cpp  ClientLoop.h  JniBridge.cpp  Log.h  MediaCodecDecoder.cpp  MediaCodecDecoder.h  SourceQuery.cpp  SourceQuery.h  TimeUs.h  UdpSocket.cpp  UdpSocket.h
client/android/app/src/main/cpp/net/: SourceQuery.cpp  SourceQuery.h  UdpSocket.h
client/android/app/src/main/java/com/deskhub/app/: KeyInputView.kt  MainActivity.kt  NativeClient.kt  StreamActivity.kt
client/android/app/src/main/java/com/rgc/remotegame/: MainActivity.kt  NativeClient.kt  StreamActivity.kt
client/android/app/src/main/res/layout/: activity_main.xml  activity_stream.xml
client/android/app/src/main/res/values/: strings.xml
client/android/fastlane/: Appfile  Fastfile
client/android/fastlane/metadata/android/en-US/: full_description.txt  short_description.txt
client/android/fastlane/metadata/android/vi/: full_description.txt  short_description.txt
client/android/fastlane/metadata/android/vi/changelogs/: default.txt
client/ios/Deskhub.xcodeproj/: project.pbxproj
client/ios/Deskhub.xcodeproj/project.xcworkspace/xcuserdata/manh.xcuserdatad/: UserInterfaceState.xcuserstate
client/ios/Deskhub.xcodeproj/xcshareddata/xcschemes/: app.xcscheme
client/ios/app/cpp/: ClientLoop.cpp  ClientLoop.h  DeskhubClient.h  DeskhubClient.mm  Log.h  VtDecoder.h  VtDecoder.mm
client/ios/app/cpp/net/: SourceQuery.cpp  SourceQuery.h  UdpSocket.cpp  UdpSocket.h
client/ios/app/swift/: App.swift  ConnectView.swift  ContentView.swift  Deskhub-Bridging-Header.h  DeskhubClient.swift  KeyInputView.swift  SessionModel.swift  SourcePickerView.swift  StreamView.swift  TouchInputView.swift  VideoLayerView.swift
client/ios/fastlane/: Appfile  Fastfile
client/ios/fastlane/metadata/: copyright.txt
client/ios/fastlane/metadata/en-US/: description.txt  keywords.txt  marketing_url.txt  name.txt  privacy_url.txt  subtitle.txt
client/ios/fastlane/metadata/review_information/: email_address.txt  notes.txt  phone_number.txt
client/ios/fastlane/metadata/vi/: description.txt  keywords.txt  name.txt  subtitle.txt
client/windows/: AgentLoop.cpp  AgentLoop.h  BmpWriter.cpp  BmpWriter.h  CMakeLists.txt  CaptureTypes.h  ClientLoop.cpp  ClientLoop.h  ClipboardSync.cpp  ClipboardSync.h  Diag.h  DiagLog.cpp  DiagLog.h  ElevatedShare.cpp  ElevatedShare.h  EncoderFactory.cpp  GpuSelect.cpp  GpuSelect.h  IVideoDecoder.h  IVideoEncoder.h  InputCapture.cpp  InputCapture.h  InputInjector.cpp  InputInjector.h  MainMenuWindow.cpp  MainMenuWindow.h  MfDecoder.cpp  MfDecoder.h  MfEncoder.cpp  MfEncoder.h  NetInfo.cpp  NetInfo.h  NetTest.cpp  NetTest.h  NvencEncoder.cpp  NvencEncoder.h  Pacer.cpp  Pacer.h  Renderer.cpp  Renderer.h  (+14 more)
client/windows/decode/: MfDecoder.cpp  Renderer.cpp  Renderer.h
client/windows/encode/: MfEncoder.cpp
client/windows/input/: InputCapture.cpp  InputCapture.h  InputInjector.cpp  InputInjector.h  LocalInputMonitor.cpp  LocalInputMonitor.h
client/windows/net/: Firewall.cpp  Firewall.h  Pacer.cpp  Pacer.h  UdpSocket.cpp  UdpSocket.h
client/windows/ui/: MainMenuWindow.cpp  SessionRow.h  SessionWindow.cpp  SessionWindow.h  SourcePickerDialog.cpp  SourcePickerDialog.h  ViewerWindow.cpp  ViewerWindow.h  WindowPickerDialog.cpp  WindowPickerDialog.h
core/: CMakeLists.txt
core/include/deskhub/control/: BitrateController.h  LinkStats.h
core/include/deskhub/input/: InputReceiver.h  InputSender.h  KeyMap.h
core/include/deskhub/session/: ClientSession.h  ClipboardAssembler.h  HostSession.h
core/include/deskhub/transport/: Packetizer.h  Reassembler.h  RetransmitCache.h
core/include/deskhub/wire/: ByteOrder.h  Wire.h
core/include/rgc/: ByteOrder.h  ClientSession.h  HostSession.h  InputReceiver.h  InputSender.h  Packetizer.h  Reassembler.h  Wire.h
core/include/rgc/control/: LinkStats.h
core/include/rgc/transport/: Reassembler.h
core/src/: ClientSession.cpp  HostSession.cpp  InputReceiver.cpp  InputSender.cpp  Packetizer.cpp  Reassembler.cpp  Wire.cpp
core/src/control/: BitrateController.cpp  LinkStats.cpp
core/src/input/: InputReceiver.cpp  InputSender.cpp
core/src/session/: ClientSession.cpp  ClipboardAssembler.cpp  HostSession.cpp
core/src/transport/: Packetizer.cpp  Reassembler.cpp  RetransmitCache.cpp
core/src/wire/: Wire.cpp
core/tests/: CoreTests.cpp  TestMain.cpp  Tests.h
core/tests/control/: ControlTests.cpp
core/tests/input/: InputTests.cpp
core/tests/session/: SessionTests.cpp
core/tests/support/: TestSupport.cpp  TestSupport.h
core/tests/transport/: FecTests.cpp  ReassemblerTests.cpp  RetransmitCacheTests.cpp
core/tests/wire/: WireTests.cpp
docs/: 01-architecture.md  02-agent.md  03-client.md  04-protocol.md  05-roadmap.md  06-phase3-transport.md  07-phase4-input.md  08-android-client.md  09-diagnostics.md  12-ios-client.md  13-release-mobile.md  README.md
platform/include/deskhubp/: Clock.h
scripts/: bootstrap.ps1  bootstrap.sh
